--- a/portfolio.html
+++ b/portfolio.html
@@ -13,35 +13,7 @@
 <body>
     <main>
         <h1 class="titulo-principal">Portfolio</h1>
-        <div class="container">
-            <p>Veja abaixo a lista dos meus projetos mais relevantes</p>
-            <ol class="portfolio">
-                <li><a href="http://bmw.com">
-                        <figure>
-                            <img src="imagens/bmw.png" alt="Site da BMW">
-                            <figcaption>BMW.com: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
-                        </figure>
-                </a></li>
-                <li><a href="http://uol.com.br">
-                        <figure>
-                            <img src="imagens/uol.png" alt="Front-page da UOL">
-                            <figcaption>UOL.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
-                        </figure>
-                </a></li>
-                <li><a href="http://www.ibm.com.br">
-                        <figure>
-                            <img src="imagens/ibm.png" alt="Site da IBM">
-                            <figcaption>IBM.com: aplicação de progressive enhancement em conjunto com aplicação back-end</figcaption>
-                        </figure>
-                </a></li>
-                <li><a href="http://g1.com.br">
-                        <figure>
-                            <img src="imagens/g1.png" alt="Front-page do portal G1">
-                            <figcaption>G1.com.br: reformulação de design e implementação de HTML, CSS e JavaScript</figcaption>
-                        </figure>
-                </a></li>
-            </ol>
-        </div>
+        <
     </main>
     <img src="imagens/eu.jpg" alt="Minha foto" class="minha-foto">
     <aside class="navegacao-site">
@@ -57,24 +29,14 @@
         </nav>
         <ul class="icones-redes-sociais">
             <li>
-                <a href="https://github.com/joaodasilva" class="github">
+                <a href="https://github.com/tiagoff99" class="github">
                     Github
                 </a>
             </li>
-            <li>
-                <a href="https://twitter.com/joaodasilva" class="twitter">
-                    Twitter
-                </a>
-            </li>
-            <li>
-                <a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508" class="linkedin">
-                    LinkedIn
-                </a>
-            </li>
+           
         </ul>
     </aside>
-    <footer class="rodape-pagina">
-        &copy; Edson Benites Silva 2018
+    <footer class="rodape-pagina"
     </footer>
 </body>
 </html>
